--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview --port 3000",
-    "start:docker": "vite preview --port 3006",
-    "lint": "biome check .",
-    "preview": "vite preview"
+    "start:docker": "vite preview --port 3007",
+    "lint": "eslint . --ext .ts,.tsx --config eslint.config.mjs",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.2",
@@ -28,13 +30,32 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@tanstack/react-query-devtools": "^5.45.1",
     "@types/node": "^22.13.14",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "@vitejs/plugin-react": "^4.2.1",
     "buffer": "^6.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix --config eslint.config.mjs"
+    ]
   }
 }
