--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,14 @@ jobs:
       - name: Build application
         run: pnpm build
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        run: |
+          docker build -t oauth-frontend:latest .
+
+      - name: Tag image for GitLab Registry
+        run: |
+          docker tag oauth-frontend:latest registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
+          docker tag oauth-frontend:latest registry.gitlab.com/store_images/docker-images/oauth-frontend:${{ github.sha }}
 
       - name: Login to GitLab Registry
         uses: docker/login-action@v3
@@ -58,14 +64,10 @@ jobs:
           username: ${{ secrets.GITLAB_USER }}
           password: ${{ secrets.GITLAB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Push image to GitLab Registry
+        run: |
+          docker push registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
+          docker push registry.gitlab.com/store_images/docker-images/oauth-frontend:${{ github.sha }}
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@master
@@ -75,13 +77,16 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT || '22' }}
           script: |
-            cd /home/${{ secrets.SERVER_USER }}/oauth-frontend
-            # Update repository if needed
-            git pull --rebase origin main
-            # Stop existing container if running
-            docker rm -f oauth-frontend || true
-            # Pull the latest image from GitLab Registry
+            # Логин в GitLab Registry для доступа к образам
             docker login -u ${{ secrets.GITLAB_USER }} -p ${{ secrets.GITLAB_TOKEN }} registry.gitlab.com
+
+            # Обновить конфигурацию в docker-compose, если необходимо
+            # Остановить существующий контейнер, если он запущен
+            docker rm -f oauth-frontend || true
+
+            # Обновить образ
             docker pull registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
-            # Run the new container
-            docker run -d --name oauth-frontend -p 3007:3007 registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
+
+            # Запустить новый контейнер средствами docker-compose
+            docker-compose pull oauth-frontend
+            docker-compose up -d oauth-frontend
