--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,27 @@
 services:
-  frontend:
-    build: .
+  oauth-frontend:
+    image: registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
+    container_name: oauth-frontend
+    restart: unless-stopped
     ports:
       - "3007:3007"
-    command: pnpm exec vite preview --host --port 3007
+    environment:
+      - VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+      - NODE_ENV=production
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3007/"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+    networks:
+      - webnet
+
+networks:
+  webnet:
+    external: true
