--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "start": "vite preview --port 3000",
     "start:docker": "vite preview --port 3007",
-    "lint": "eslint . --ext .ts,.tsx --config eslint.config.mjs",
+    "lint": "eslint . --config eslint.config.mjs",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
     "preview": "vite preview",
     "prepare": "husky"
