feature: add logic for authorization by google local

--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,6 @@
 # During CI/CD build, the VITE_GOOGLE_CLIENT_ID variable will be replaced
 # with the value from GitHub Actions secrets
 VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+NODE_ENV=production
+VITE_AUTH_API_URL=https://api.yourdomain.com
+VITE_FRONTEND_URL=https://yourdomain.com
