--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,29 +41,33 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+        working-directory: frontend-oauth-frontend
 
       - name: Lint check
         run: pnpm lint
+        working-directory: frontend-oauth-frontend
 
       - name: Create env file
         run: |
-          echo "VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}" > .env.production
+          echo "VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}" > frontend-oauth-frontend/.env.production
 
       - name: Build application
         run: pnpm build
+        working-directory: frontend-oauth-frontend
         env:
           VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
 
       - name: Build Docker image
-        run: |
-          docker build -t oauth-frontend:latest .
+        run: docker build -t oauth-frontend:latest .
+        working-directory: frontend-oauth-frontend
 
       - name: Tag image for GitLab Registry
         run: |
           docker tag oauth-frontend:latest registry.gitlab.com/store_images/docker-images/oauth-frontend:latest
           docker tag oauth-frontend:latest registry.gitlab.com/store_images/docker-images/oauth-frontend:${{ github.sha }}
+        working-directory: frontend-oauth-frontend
 
-      - name: Login to GitLab Registry
+      - name: Login to GitLab Registry on runner
         uses: docker/login-action@v3
         with:
           registry: registry.gitlab.com
@@ -83,12 +87,16 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT || '22' }}
           script: |
-            # Логин в GitLab Registry для доступа к образам
+            # Обновляем авторизацию на сервере
             docker login -u ${{ secrets.GITLAB_USER }} -p ${{ secrets.GITLAB_TOKEN }} registry.gitlab.com
 
-            # Обновить конфигурацию для обеспечения переменных окружения
-            echo "VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}" > .env
+            # Генерируем .env для фронтенда
+            cd /home/dr_sgs/frontend-oauth-frontend
+            echo "VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}" > .env.production
 
-            # Обновить образ
-            docker-compose pull oauth-frontend
-            docker-compose up -d oauth-frontend
+            # Собираем и деплоим фронтенд из его каталога
+            docker-compose -f docker-compose.frontend-oauth-frontend.yml pull oauth-frontend
+            docker-compose -f docker-compose.frontend-oauth-frontend.yml up -d oauth-frontend
+
+            # После этого перезагружаем Nginx, чтобы подхватить новую сборку
+            docker exec nginx nginx -s reload
