--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:prod": "vite --mode production",
     "build": "tsc && vite build",
     "build:dev": "tsc && vite build --mode development",
+    "build:prod": "tsc && vite build --mode production",
     "start": "vite preview --port 3007",
     "start:docker": "vite preview --port 3007",
     "lint": "eslint . --config eslint.config.mjs",
