feat(balance): add real-time Substrate balance tracking
- Add `src/api/substrateApi.ts` with `getInitialBalance()` and `getSubstrateConfig()`.
- Update `src/config.ts` with `substrate.balanceEndpoint`, `substrate.configEndpoint`, `substrate.rpcUrl`.
- Add Node globals polyfill in `vite.config.ts` for `@polkadot/api`.
- Create `src/hooks/useBalanceWebSocket.ts`:
  - Initialize `ApiPromise` + `WsProvider`, load initial balance, subscribe to `api.query.system.account`.
  - Skip first event, filter duplicates, track status, clean up on unmount.
- Add `src/components/BalanceCard.tsx` to show balance, status, block, history.
- Update `src/pages/ProfilePage.tsx`:
  - Fetch initial balance/config, use `useBalanceWebSocket`, pass data to `BalanceCard`.
- Fix TypeScript: handle optional `accountId`, adjust unsubscribe callback.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@polkadot/api": "^16.0.1",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.1.3",
@@ -33,6 +34,7 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "@tanstack/react-query-devtools": "^5.71.5",
